--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>学习之余，我还是一个健身爱好者，同时也非常喜欢写作和折腾东西。</p>
 
-    <p>这是我fork**柏荧(BY)**大大的代码搭建的个人博客，这是他的GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a>。如果你也想搭建一个类似的博客，请参考他的repo~</p>
+    <p>这是我fork<strong>柏荧(BY)</strong>大大的代码搭建的个人博客，这是他的GitHub主页<a href="https://github.com/qiubaiying">👉GitHub·BY</a>。如果你也想搭建一个类似的博客，请参考他的repo~</p>
 
     <p>19年末忙着考研，之前博客的服务器崩了也没时间修，现在文档都找不回来了hhh。想了想还是决定在GitHub上搭建新的静态博客，毕竟省事儿，连接速度和稳定性也更有保障（诚信诚念GitHub大法好，微软大法好</p>
     
@@ -42,7 +42,7 @@ header-img: "img/post-bg-rwd.jpg"
 
     <p>I am a sports enthusiast, I like fitness and jogging.</p>
 
-    <p>This is my personal blog, forked from BY's GitHub repo. His GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>. If you want to build a blog like this too, you can find this repo on his GitHub Pages.</p>
+    <p>This is my personal blog, forked from <strong>BY's</strong> GitHub repo. His GitHub  👉 <a href="http://github.com/qiubaiying">Github·BY</a>. If you want to build a blog like this too, you can find this repo on his GitHub Pages.</p>
 
     <p>Last year I was too busy preparing for my post-graduate entrance examination, didn't even note my former blog server was broken lol. Finally I decided to build a new blog on GitHub. It's fast and free, why not?</p>
 
